Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18791

Wrong error upon creating Aria table with long index on BLOB

    XMLWordPrintable

Details

    Description

      CREATE TABLE t1 (a TEXT, UNIQUE(a)) ENGINE=Aria;
      

      10.4 3b47587f

      mysqltest: At line 1: query 'CREATE TABLE t1 (a TEXT, UNIQUE(a)) ENGINE=Aria' failed: 1904: Key/Index cannot be defined on a virtual generated column
      

      Attachments

        Issue Links

          Activity

            People

              sachin.setiya.007 Sachin Setiya (Inactive)
              elenst Elena Stepanova
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 2.75h
                  1d 2.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.