MDEV-18791 Wrong error upon creating Aria table with long index on BLOB

If we have long unique key for aria engine return too long key error, because
Aria does not support key on virtual generated column.